[gd_scene load_steps=7 format=3 uid="uid://sye8gjdjtua0"]

[ext_resource type="FontFile" uid="uid://b7fxjfjmm67r8" path="res://HEY LEMON.otf" id="1"]
[ext_resource type="FontFile" uid="uid://k5kkumibxux" path="res://BubbleShine.ttf" id="2"]
[ext_resource type="Script" path="res://Interfaz.gd" id="3"]

[sub_resource type="FontFile" id="1"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("1"), ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="2"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="3"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[node name="Interfaz" type="CanvasLayer"]
script = ExtResource("3")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -62.0
offset_right = 62.0
offset_bottom = 130.0
theme_override_fonts/font = SubResource("1")
text = " 0"

[node name="Mensaje" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -219.0
offset_top = -65.0
offset_right = 219.0
offset_bottom = 65.0
theme_override_fonts/font = SubResource("2")
text = "Weather on the moon "

[node name="BotonPlay" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -102.0
offset_top = -200.0
offset_right = 102.0
offset_bottom = -100.0
theme_override_fonts/font = SubResource("3")
text = "Player"

[node name="MensajeTimer" type="Timer" parent="."]

[connection signal="pressed" from="BotonPlay" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="MensajeTimer" to="." method="_on_MensajeTimer_timeout"]
